fixed accesibility label of button in iphone NIB file

--- a/code/RakuLayoutExample/App/Views/iPhone/en.lproj/RKUHelloViewController_iPhone.xib
+++ b/code/RakuLayoutExample/App/Views/iPhone/en.lproj/RKUHelloViewController_iPhone.xib
@@ -111,7 +111,7 @@
 						<string key="NSReuseIdentifierKey">_NS:222</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<object class="IBUIAccessibilityConfiguration" key="IBUIAccessibilityConfiguration">
-							<string key="IBUIAccessibilityLabel">greetButton</string>
+							<string key="IBUIAccessibilityLabel">GreetButton</string>
 						</object>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
